# rust-crud-sql-api

./: .env  .env.prod  Cargo.toml  README.md  docker-compose.yml  recipe.json
db/: initial.sql
docker/: Dockerfile  Dockerfile.precompiled
src/: main.rs
src/articles/: handlers.rs  models.rs  routes.rs  service.rs
src/auth/: handlers.rs  middleware.rs  mod.rs  models.rs  routes.rs
src/environment/: argon.rs  mod.rs
src/error/: handlers.rs  mod.rs
src/users/: handlers.rs  models.rs  service.rs
